@@ -4,8 +4,10 @@ ocaml (3.10.0-8) UNRELEASED; urgency=low
   * CDBS class
     - invoke ocamldoc after dh_install has been run (otherwise ocamldoc is
       likely to generate empty API references ...)
+    - add support for automatic generation of doc-base entries for ocamldoc
+      generated API reference
 
- -- Stefano Zacchiroli <zack@debian.org>  Sun, 02 Sep 2007 16:51:41 +0200
+ -- Stefano Zacchiroli <zack@debian.org>  Sun, 02 Sep 2007 17:49:36 +0200
 
 ocaml (3.10.0-7) unstable; urgency=low
 
